--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <figure id="img-div">
         <img
           id="image"
-          src="C:\Users\nexus\Documents\Atom\Projects\TWICE\Resources\PHOTO.jpg"
+          src="Resources/PHOTO.jpg"
           alt="TWICE The Scientist"
         />
         <figcaption id="img-caption">
